--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Wordpress Reboot</title>
 </head>
 <body>
-    
+    <header class="box-pink">
+
+    </header>
+    <div class="spacing">
+        <div class="grey-button">FEATURES</div>
+        <div class="grey-button">EDITORIALS</div>
+        <div class="grey-button">ENVIROMENTS</div>
+        <div class="grey-button">BLOG</div>
+        <div class="grey-button">SHOP</div>
+        <div class="grey-button">CONTACT</div>
+    </div>
+    <section class="box-yellow"></section>
+        <div class="container">
+            <header class="box-blue"></header>
+                <div class="container clearfix">
+                    <div class="left-box"></div>
+                    <div class="middle-box"></div>
+                    <div class="right-box"></div>
+                </div>
+        </div>     
+<footer class="box-violet"></footer>  
 </body>
 </html>
