--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header class="box-pink">
-
     </header>
     <div class="spacing">
         <div class="grey-button">FEATURES</div>
@@ -19,7 +18,12 @@
         <div class="grey-button">SHOP</div>
         <div class="grey-button">CONTACT</div>
     </div>
-    <section class="box-yellow"></section>
+    <section class="box-yellow">
+        <div class="clearfix spacing">
+            <h1 class="title">Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+            <div class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis officiis sequi tempora exercitationem! Facere animi incidunt eum similique voluptates debitis in, nobis itaque neque aliquid, aperiam totam inventore molestias possimus.</div>
+        </div>    
+    </section>
         <div class="container">
             <header class="box-blue"></header>
                 <div class="container clearfix">
