--- a/index.html
+++ b/index.html
@@ -24,12 +24,40 @@
             <div class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis officiis sequi tempora exercitationem! Facere animi incidunt eum similique voluptates debitis in, nobis itaque neque aliquid, aperiam totam inventore molestias possimus.</div>
         </div>    
     </section>
-        <div class="container">
-            <header class="box-blue"></header>
+        <div class="container clearfix">
+            <header class="box-blue spacing-1">
+                <h1>Leadership</h1>
+                <div>Fertenum urna a libero tempus</div>
+            </header>
                 <div class="container clearfix">
-                    <div class="left-box"></div>
+                    <div class="left-box">
+                    </div>
+                    <div class="details">
+                        <div class="bold">
+                            Lorem
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                        </p>
+                    </div>
                     <div class="middle-box"></div>
+                    <div class="details">
+                        <div class="bold">
+                            Lorem
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                        </p>
+                    </div>
                     <div class="right-box"></div>
+                    <div class="details">
+                        <div class="bold">
+                            Lorem
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                        </p>
+                    </div>
                 </div>
         </div>     
 <footer class="box-violet"></footer>  
