--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Wordpress Reboot</title>
 </head>
 <body>
-    <header class="box-pink">
+    <header class="logo">
     </header>
     <div class="spacing">
         <div class="grey-button">FEATURES</div>
@@ -18,38 +18,25 @@
         <div class="grey-button">SHOP</div>
         <div class="grey-button">CONTACT</div>
     </div>
-    <section class="box-yellow">
+    <section class="main-content">
         <div class="clearfix spacing">
             <h1 class="title">Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
             <div class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis officiis sequi tempora exercitationem! Facere animi incidunt eum similique voluptates debitis in, nobis itaque neque aliquid, aperiam totam inventore molestias possimus.</div>
         </div>    
     </section>
         <div class="container clearfix">
-            <header class="box-blue spacing-1">
+            <header class="new-section spacing-1">
                 <h1>Leadership</h1>
                 <div>Fertenum urna a libero tempus</div>
             </header>
-                <div class="container clearfix">
-                    <div class="left-box">
-                    </div>
-                    <div class="details">
-                        <div class="bold">
-                            Lorem
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
-                        </p>
-                    </div>
+                <div class="container">
+                    <div class="left-box"></div>
                     <div class="middle-box"></div>
-                    <div class="details">
-                        <div class="bold">
-                            Lorem
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
-                        </p>
-                    </div>
                     <div class="right-box"></div>
+                </div>
+        </div>
+            <div class="second-row">
+                <div>
                     <div class="details">
                         <div class="bold">
                             Lorem
@@ -59,7 +46,24 @@
                         </p>
                     </div>
                 </div>
-        </div>     
-<footer class="box-violet"></footer>  
+                <div class="details-middle">
+                    <div class="bold">
+                        Lorem
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                    </p>
+                </div>
+                <div class="details">
+                    <div class="bold">
+                        Lorem
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                    </p>
+                </div> 
+            </div>  
+            <div class="clearfix"></div>    
+<footer class="box-violet">Design with <span class="heart">&hearts;</span></footer>  
 </body>
 </html>
