--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
             <div class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis officiis sequi tempora exercitationem! Facere animi incidunt eum similique voluptates debitis in, nobis itaque neque aliquid, aperiam totam inventore molestias possimus.</div>
         </div>    
     </section>
-        <div class="container clearfix">
             <header class="new-section spacing-1">
                 <h1>Leadership</h1>
                 <div>Fertenum urna a libero tempus</div>
             </header>
-                <div class="container">
+                <div class="container clearfix">
                     <div class="left-box"></div>
                     <div class="middle-box"></div>
                     <div class="right-box"></div>
                 </div>
-        </div>
-            <div class="second-row">
+            <div class="second-row clearfix">
                 <div>
                     <div class="details">
                         <div class="bold">
@@ -54,7 +52,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
                     </p>
                 </div>
-                <div class="details">
+                <div class="details-1">
                     <div class="bold">
                         Lorem
                     </div>
@@ -62,8 +60,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
                     </p>
                 </div> 
-            </div>  
-            <div class="clearfix"></div>    
+            </div>      
 <footer class="box-violet">Design with <span class="heart">&hearts;</span></footer>  
 </body>
 </html>
