--- a/index.html
+++ b/index.html
@@ -29,38 +29,41 @@
                 <div>Fertenum urna a libero tempus</div>
             </header>
                 <div class="container clearfix">
-                    <div class="left-box"></div>
-                    <div class="middle-box"></div>
-                    <div class="right-box"></div>
-                </div>
-            <div class="second-row clearfix">
-                <div>
-                    <div class="details">
-                        <div class="bold">
-                            Lorem
+                    <div class="left-box">
+                        <div class="image-left"></div>
+                        <div>
+                            <div class="bold">
+                                Lorem
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
-                        </p>
+                    </div>
+                    <div class="middle-box">
+                        <div class="image-middle"></div>
+                        <div>
+                            <div class="bold">
+                                Lorem
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="right-box">
+                        <div class="image-right"></div>
+                        <div>
+                            <div class="bold">
+                                Lorem
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="details-middle">
-                    <div class="bold">
-                        Lorem
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
-                    </p>
-                </div>
-                <div class="details-1">
-                    <div class="bold">
-                        Lorem
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatibus iste, dolor molestiae nihil incidunt sed labore fugit illo quia minus amet mollitia hic autem iusto? Sit a tenetur officiis.
-                    </p>
-                </div> 
             </div>      
-<footer class="box-violet">Design with <span class="heart">&hearts;</span></footer>  
+<footer class="closure">Design with <span class="heart">&hearts;</span></footer>  
 </body>
 </html>
